kubernetes/apps/security/pocket-id/app/httproute-email-logo-external.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id-email-logo-external
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  hostnames:
  - "sso.${HOME_DOMAIN}"
  rules:
  - matches:
    - method: GET
      path:
        type: Exact
        value: /api/application-images/email
    - method: HEAD
      path:
        type: Exact
        value: /api/application-images/email
    backendRefs:
    - name: pocket-id
      port: 1411
