kubernetes/apps/security/pocket-id/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "sso.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: pocket-id
      port: 1411
